# app/routes/v2/clusters.js
@@ -23,7 +23,7 @@ const ebl = require('express-bunyan-logger');
 const objectHash = require('object-hash');
 const _ = require('lodash');
 const moment = require('moment');
-
+const verifyOrgKey = require('../../utils/orgs.js').verifyOrgKey;
 const getBunyanConfig = require('../../utils/bunyan.js').getBunyanConfig;
 const getCluster = require('../../utils/cluster.js').getCluster;
 const buildSearchableDataForResource = require('../../utils/cluster.js').buildSearchableDataForResource;
@@ -292,6 +292,17 @@ const addClusterMessages = async (req, res, next) => {
   }
 };
 
+const getClusters = async (req, res, next) => {
+  try {
+    const Clusters = req.db.collection('clusters');
+    const orgId = req.org._id + '';
+    const clusters = await Clusters.find({ 'org_id': orgId }).toArray();
+    return res.status(200).send({clusters});
+  } catch (err) {
+    req.log.error(err.message);
+    next(err);
+  }
+};
 
 router.use(ebl(getBunyanConfig('razeedash-api/clusters')));
 
@@ -306,5 +317,9 @@ router.post('/:cluster_id/resources/sync', asyncHandler(getCluster), asyncHandle
 
 // /api/v2/clusters/:cluster_id/messages
 router.post('/:cluster_id/messages', asyncHandler(getCluster), asyncHandler(addClusterMessages));
+
+// /api/v2/clusters
+router.get('/', asyncHandler(verifyOrgKey), asyncHandler(getClusters));
+
 
 module.exports = router;
